# skill

./: .gitignore  LICENSE
code-analyse/: .gitignore  SKILL.md  pyproject.toml
code-analyse/scripts/: code_analyse_run_tracking.py
code-analyse/skill-debug/: config.yaml  evaluation-guide.md  injection-state.json  review-prompt.md
code-analyse/templates/: current-run.md  future-work.md  (+1 more)
code-plan/: README.md  SKILL.md  USAGE.md
code-review/: README.md  SKILL.md  USAGE.md
debug-review/: README.md  SKILL.md  USAGE.md
skill-debug/: .gitignore  SKILL.md  pyproject.toml
skill-debug/review_runners/: base.py  codex_thread.py  noop.py  openai_api.py
skill-debug/runtime/config/: backends.example.yaml
skill-debug/scripts/: skill_debug.py
skill-debug/src/skill_debug_tools/: __init__.py
skill-debug/src/skill_debug_tools/attach/: __init__.py  target.py
skill-debug/src/skill_debug_tools/common/: __init__.py  files.py  markdown.py
skill-debug/src/skill_debug_tools/debug_run/: __init__.py  lifecycle.py
skill-debug/src/skill_debug_tools/review/: __init__.py  queue.py  run.py
skill-debug/src/skill_debug_tools/workspace/: __init__.py  discovery.py
skill-debug/templates/: evaluation-guide.md  injected-debug-block.md  review-prompt.md  review.md
skill-debug/tests/: conftest.py  test_debug_run_lifecycle.py  test_framework_helpers.py  test_review_queue.py  test_review_run.py  test_review_runners.py  test_skill_debug_attach.py  test_skill_debug_list.py  test_workspace_discovery.py
tests/: test_code_plan_handoff_contract.py  test_debug_review_skill_contract.py
(+67 files in other folders)
